2004-05-11  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: call ShowRunStatus only if necessary.
	* PollVec.cc, PollVec.h: inline Empty method.
	* SMTask.cc, SMTask.h: inline Enter/Leave methods.
	* StatusLine.cc: (CanShowNow) new method.
	* ftpclass.cc, ftpclass.h: support CPSV; add utf8_activated flag;
	  added workaround for servers which refuse to do OPTS before login.

2004-05-07  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: check use-mlsd and use-site-chmod before connecting.

2004-05-06  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed core dump in case of extra server reply; don't
	  unconditionally disconnect on 221 as some broken servers use it for
	  FEAT reply. (reported by Wang WenRui <wangwr@ustc.edu>)

2004-05-04  SHIOTA Shoichi <Shoichi.Shiota@lightwell.co.jp>

	* StatusLine.cc: don't write zero bytes to terminal - it can produce
	  unexpected results.

2004-04-29  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: store zero sized files properly.

2004-04-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: accept multiple AUTH lines in FEAT reply; check if
	  ssl is activavted before trying to make protected data connection.
	* NetAccess.cc: retry after NOT_SUPP fast so that the status message
	  won't appear on the screen.

2004-04-22  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: add UNKNOWN file type; handle Door type.
	* MirrorJob.cc: add UNKNOWN to switch.
	* FtpListInfo.cc: ignore special files, don't treat them as errors.

2004-04-21  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.cc: (IsDirectory) use dirname_modify; check for MP_LIST
	  in cache; add assert.
	* misc.cc: fix comment; special case for tz=GMT for speed-up.
	* FileSet.cc: (FileInfo::parse_ls_line) new function, moved from
	  FtpListInfo.cc with minor modifications; set longname in it.
	* FtpListInfo.cc, Fish.cc: use FileInfo::parse_ls_line.